--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "gsap": "^3.12.4",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.69.7"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "daisyui": "^4.5.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
