--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
   },
   "dependencies": {
     "@gsap/react": "^2.0.2",
+    "@next/font": "^14.1.0",
+    "dotenv": "^16.3.2",
+    "flowbite": "^2.2.1",
+    "flowbite-react": "^0.7.2",
     "framer-motion": "^10.17.7",
     "gsap": "^3.12.4",
+    "mysql2": "^3.7.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-feather": "^2.0.10",
     "sass": "^1.69.7"
   },
   "devDependencies": {
