--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-feather": "^2.0.10",
+    "react-icons": "^5.0.1",
     "sass": "^1.69.7"
   },
   "devDependencies": {
