--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18",
     "react-feather": "^2.0.10",
     "react-icons": "^5.0.1",
-    "sass": "^1.69.7"
+    "sass": "^1.69.7",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
