--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.0.2",
+    "@headlessui/react": "^1.7.18",
     "@next/font": "^14.1.0",
     "dotenv": "^16.3.2",
     "flowbite": "^2.2.1",
