--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-dom": "^18",
     "react-feather": "^2.0.10",
     "react-icons": "^5.0.1",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0",
     "sass": "^1.69.7"
   },
   "devDependencies": {
