--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@gsap/react": "^2.0.2",
     "@headlessui/react": "^1.7.18",
     "@next/font": "^14.1.0",
+    "@strapi/blocks-react-renderer": "^1.0.0",
     "date-fns": "^3.3.1",
     "dotenv": "^16.3.2",
     "flowbite": "^2.2.1",
@@ -24,8 +25,6 @@
     "react-dom": "^18",
     "react-feather": "^2.0.10",
     "react-icons": "^5.0.1",
-    "react-markdown": "^9.0.1",
-    "remark-gfm": "^4.0.0",
     "sass": "^1.69.7"
   },
   "devDependencies": {
