--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "framer-motion": "^11.0.5",
     "gsap": "^3.12.4",
     "mysql2": "^3.7.1",
-    "next": "14.0.4",
+    "next": "^14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-feather": "^2.0.10",
