--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "^18",
     "react-feather": "^2.0.10",
     "react-icons": "^5.0.1",
-    "sass": "^1.69.7"
+    "sass": "^1.69.7",
+    "swiper": "^9.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
