--- a/.hintrc
+++ b/.hintrc
@@ -11,6 +11,12 @@
           "iframe[loading]"
         ]
       }
+    ],
+    "axe/forms": [
+      "default",
+      {
+        "select-name": "off"
+      }
     ]
   }
 }
