--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "flowbite-react": "^0.7.2",
     "framer-motion": "^11.0.5",
     "gsap": "^3.12.4",
+    "keen-slider": "^6.8.6",
     "mysql2": "^3.7.1",
     "next": "^14.0.4",
     "react": "^18",
