--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "keen-slider": "^6.8.6",
     "mysql2": "^3.7.1",
     "next": "^14.0.4",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "react-feather": "^2.0.10",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/swiper": "^6.0.0",
