--- a/.hintrc
+++ b/.hintrc
@@ -25,6 +25,7 @@
         "duplicate-id": "off"
       }
     ],
-    "typescript-config/consistent-casing": "off"
+    "typescript-config/consistent-casing": "off",
+    "apple-touch-icons": "off"
   }
 }
